--- a/config_service/src/main/resources/application.properties
+++ b/config_service/src/main/resources/application.properties
@@ -1,13 +1,29 @@
 
 # ?????? ????????????
-server.port=8888
+
 eureka.instance.hostname=localhost
 # Eureka ?????????
-spring.application.name=config-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+# ?????????? ??????????????? ?????
 spring.main.allow-bean-definition-overriding=true
+#spring.autoconfigure.exclude=org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration
+
+server.port=8761
+spring.application.name=eureka-server
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.beans.factory=TRACE
 
 
-# ????
-logging.level.org.springframework=INFO
+
+
+
+
+
+
+
+
+
